# EagleEye

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ReadMe
EagleEye/: CMakeLists.txt  EagleEye.vcxproj.user.in
EagleEye/UIs/: QNodeWidget.ui  bookmark_dialog.ui  csv_wizard.ui  datastreamwidget.ui  dialog_network_stream_selection.ui  dialog_network_stream_selection.ui.autosave  mainwindow.ui  nodelistdialog.ui  plotwindow.ui  plotwizarddialog.ui  rccsettingsdialog.ui  settingdialog.ui  signal_dialog.ui
EagleEye/include/: FileOrFolderDialog.h  GraphScene.hpp  NodeListDialog.h  NodeView.h  ParameterPlotter.hpp  ParameterPlotterImpl.hpp  QNodeWidget.h  bookmark_dialog.h  csv_wizard.h  dialog_network_stream_selection.h  mainwindow.h  object_constructors.hpp  object_proxies.hpp  parameterplotter.h  plotwindow.h  plotwizarddialog.h  rccsettingsdialog.h  settingdialog.h  signal_dialog.h  user_interface_persistence.h
EagleEye/src/: FileOrFolderDialog.cpp  GraphScene.cpp  NodeListDialog.cpp  NodeView.cpp  QNodeWidget.cpp  TestNode.cpp  bookmark_dialog.cpp  csv_wizard.cpp  dialog_network_stream_selection.cpp  main.cpp  mainwindow.cpp  object_constructors.cpp  object_proxies.cpp  parameterplotter.cpp  plotwindow.cpp  plotwizarddialog.cpp  qcustomplot.cpp  rccsettingsdialog.cpp  settingdialog.cpp  signal_dialog.cpp  user_interface_persistence.cpp
EagleLib/: CMakeLists.txt  EagleLibConfig.cmake.in
EagleLib/Parameters/: CMakeLists.txt
EagleLib/RuntimeCompiler/: CompileOptions.h  Compiler_PlatformPosix.cpp  FileMonitor.cpp  FileMonitor.h
EagleLib/RuntimeObjectSystem/: IObject.h  ISimpleSerializer.h  ObjectInterface.h  ObjectInterfacePerModule.h  RuntimeObjectSystem.cpp  RuntimeSourceDependency.h  iobject.h
EagleLib/cmake/: Findcereal.cmake  ProjectFiles.cmake
EagleLib/cuda_utils/: CMakeLists.txt
EagleLib/include/: CudaUtils.hpp  EagleLib.h  Factory.h  IObject.h  IObjectUtils.h  Manager.h  ObjectDetection.hpp  Parameters.h  Plugins.h  StdioLogSystem.h  type.h
EagleLib/parameters/: CMakeLists.txt
EagleLib/python/: CMakeLists.txt
EagleLib/pythonqt/: CMakeLists.txt
EagleLib/src/: CudaUtils.hpp  EagleLib.h  Events.cpp  Events.h  GpuMatAllocators.cpp  GpuMatAllocators.h  IObject.h  IObjectNotifiable.h  LokiTypeInfo.h  Manager.cpp  Manager.cpp.autosave  Manager.h  NodeNotifiable.h  ParameteredObject.cpp  ParameteredObject.h  ParameteredObject_impl.hpp  Parameters.cpp  Parameters.h  Parameters.hpp  Plugins.cpp  ProjectIds.hpp  Qualifiers.hpp  StdioLogSystem.cpp  SystemTable.cpp  SystemTable.hpp  Thrust_interop.hpp  logger.cpp  logger.hpp  precompiled.hpp  type.cpp  type.h
EagleLib/tests/: CMakeLists.txt  Test.vcxproj.user.in
Plugins/: CMakeLists.txt  PluginExport.hpp.in  PluginTemplate.cmake  plugin_config.cpp.in
Plugins/BundleAdjustment/: BundleAdjustment.cpp  BundleAdjustment.h  CMakeLists.txt
Plugins/Caffe/: CMakeLists.txt  Caffe.cpp  Caffe.h  caffe_include.h  caffe_init.cpp  caffe_init.h  caffe_input_populator.cpp  caffe_input_populator.h  caffe_train_solver.cpp  caffe_train_solver.h  result_cache.cpp  result_cache.h
Plugins/Core/: CMakeLists.txt
Plugins/Dev/: CMakeLists.txt  Calibration.cpp  Calibration.h  FastMS.cpp  FastMS.h  HeartBeatBuffer.cpp  HeartBeatBuffer.h  KeyFrameServer.cpp  KeyFrameServer.h  Segmentation.cpp  Segmentation.cu  Segmentation.h  Segmentation_impl.cu  Stereo.cpp  Stereo.h  super_resolution.cpp  super_resolution.h
Plugins/EagleEye_test_plugin/: CMakeLists.txt  Visualization.cpp  Visualization.h  Visualization.hpp
Plugins/Flann/: CMakeLists.txt
Plugins/GStreamer/: CMakeLists.txt
Plugins/ML/: CMakeLists.txt
Plugins/MXnet/: CMakeLists.txt
Plugins/NVCC_test/: CMakeLists.txt  nvcc_test.cpp  nvcc_test.cu  nvcc_test.cuh  nvcc_test.h
Plugins/PCL_bridge/: CMakeLists.txt  PCL_bridge.cpp  PCL_bridge.h  pcl_bridge.cu  pcl_bridge.cuh  visualizer.cpp  visualizer.h
Plugins/Plotting/: CMakeLists.txt
Plugins/ROS/: CMakeLists.txt
Plugins/SLAM/: CMakeLists.txt
Plugins/Segmentation/: CMakeLists.txt  DisjointSetForest.cpp  DisjointSetForest.h  EGBS.cpp  EGBS.h  FastMS.cpp  FastMS.h  Segmentation.cpp  Segmentation.h
Plugins/VLC/: CMakeLists.txt
Plugins/Vclick3d/: CMakeLists.txt  EagleEye_config.txt  Vclick3d_config.txt
Plugins/cntk/: CMakeLists.txt
Plugins/core/: CMakeLists.txt
Plugins/flann/: CMakeLists.txt
Plugins/frame_grabber_openni2/: CMakeLists.txt
Plugins/frame_grabbers/: CMakeLists.txt
Plugins/framegrabbers/: CMakeLists.txt
Plugins/freenect/: CMakeLists.txt
Plugins/gstreamer/: CMakeLists.txt
Plugins/ml/: CMakeLists.txt
Plugins/point_clouds/: CMakeLists.txt
Plugins/pointclouds/: CMakeLists.txt
Plugins/video/: CMakeLists.txt  camera_motion_tracking.cpp  camera_motion_tracking.hpp
Plugins/vtkRendering/: CMakeLists.txt  Renderers.cpp  Renderers.h
plugins/: CMakeLists.txt  PluginExport.hpp.in  PluginTemplate.cmake  plugin_config.cpp.in
plugins/BundleAdjustment/: BundleAdjustment.h
plugins/Caffe/: CMakeLists.txt
plugins/MXnet/: CMakeLists.txt
plugins/ROS/: CMakeLists.txt
plugins/aqbio/: CMakeLists.txt
plugins/aqbundleadjustment/: CMakeLists.txt
plugins/aqcaffe/: CMakeLists.txt
plugins/aqcntk/: CMakeLists.txt
plugins/aqcore/: CMakeLists.txt
plugins/aqdarknet/: CMakeLists.txt
plugins/aqdev/: CMakeLists.txt
plugins/aqdlib/: CMakeLists.txt
plugins/aqflann/: CMakeLists.txt
plugins/aqframegrabbers/: CMakeLists.txt
plugins/aqgputracking/: CMakeLists.txt
plugins/aqgstreamer/: CMakeLists.txt
plugins/aqml/: CMakeLists.txt
plugins/aqmxnet/: CMakeLists.txt
plugins/aqopenni2/: CMakeLists.txt
samples/: CMakeLists.txt  IParameterResource.cpp  IParameterResource.hpp  Moment.cpp  Moment.hpp  SimpleConsole.cpp  TParameterResource.cpp  TParameterResource.hpp  TestNode.cpp  WebSink.cpp  WebSink.hpp  vclick.cpp  vclick.hpp
samples/WebUi/: main.cpp  (+3 more)
tests/: CMakeLists.txt  TestNode.cpp  bind_test.cpp  perf_test.cpp  test_cuda_callback.cpp  test_plugin_rcc.cpp  test_pplx.cu  test_rcc.cpp  test_scoped_buffer.cu  test_shared_ptr.cpp  test_tree.cpp  test_ui_callback.cpp
(+1166 files in other folders)
